# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "domaindata_proto",
    srcs = ["domaindata.proto"],
    import_prefix = "kuscia",
    deps = ["//proto/api/v1alpha1:common_proto"],
)

cc_proto_library(
    name = "domaindata_cc_proto",
    deps = [
        ":domaindata_proto",
    ],
)

cc_grpc_library(
    name = "domaindata_cc_grpc",
    srcs = [
        ":domaindata_proto",
    ],
    grpc_only = True,
    deps = [
        ":domaindata_cc_proto",
    ],
)

proto_library(
    name = "domaindatasource_proto",
    srcs = ["domaindatasource.proto"],
    import_prefix = "kuscia",
    deps = ["//proto/api/v1alpha1:common_proto"],
)

cc_proto_library(
    name = "domaindatasource_cc_proto",
    deps = [
        ":domaindatasource_proto",
    ],
)

cc_grpc_library(
    name = "domaindatasource_cc_grpc",
    srcs = [
        ":domaindatasource_proto",
    ],
    grpc_only = True,
    deps = [
        ":domaindatasource_cc_proto",
    ],
)

proto_library(
    name = "flightdm_proto",
    srcs = [
        "flightdm.proto",
    ],
    import_prefix = "kuscia",
    deps = [
        ":domaindata_proto",
        ":domaindatasource_proto",
    ],
)

cc_proto_library(
    name = "flightdm_cc_proto",
    deps = [":flightdm_proto"],
)
