# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library", "cpp_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "domaindata_proto",
    srcs = ["domaindata.proto"],
    import_prefix = "kuscia",
    deps = ["//proto/api/v1alpha1:common_proto"],
)

cpp_proto_library(
    name = "domaindata_cpp_proto",
    protos = [":domaindata_proto"],
    deps = [
        "//proto/api/v1alpha1:common_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "domaindata_cpp_grpc",
    protos = [":domaindata_proto"],
    deps = [
        "//proto/api/v1alpha1:common_cpp_proto",
    ],
)

proto_library(
    name = "domaindatasource_proto",
    srcs = ["domaindatasource.proto"],
    import_prefix = "kuscia",
    deps = ["//proto/api/v1alpha1:common_proto"],
)

cpp_proto_library(
    name = "domaindatasource_cc_proto",
    protos = [
        ":domaindatasource_proto",
    ],
    deps = [
        "//proto/api/v1alpha1:common_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "domaindatasource_cpp_grpc",
    protos = [
        ":domaindatasource_proto",
    ],
    deps = [
        "//proto/api/v1alpha1:common_cpp_proto",
    ],
)

proto_library(
    name = "flightdm_proto",
    srcs = [
        "flightdm.proto",
    ],
    import_prefix = "kuscia",
    deps = [
        ":domaindata_proto",
        ":domaindatasource_proto",
    ],
)

cc_proto_library(
    name = "flightdm_cc_proto",
    deps = [":flightdm_proto"],
)
